# impedance.py

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chi_sq2_Imag.npy  Chi_sq_Imag.npy  Gamry_example.ipynb  LICENSE  LinKK Check.ipynb  M_values.npy  Mus2_fig6.npy  Mus_fig6.npy  README.md  Replicate Schonleber.ipynb  Untitled.ipynb  Versastudio EIS Example.par  Z_linKK2_fig5.npy  Z_linKK_fig5.npy  make.bat  paper.md  pylama.ini  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  data-file-support-request.md  equivalent-circuit-element-request.md
.github/workflows/: ci.yml  release.yml
EISfit/: __init__.py  circuit_elements.py  circuits.py  fitting.py  genetic.py  preprocessing.py  validation.py
EISfit/.ipynb_checkpoints/: circuits-checkpoint.py  fitting-checkpoint.py
EISfit/tests/: __init__.py  test_circuit_elements.py  test_circuits.py  test_fitting.py
data/: Chalco-in-buffer-50mV.DTA  Circuit1_EIS_1.z  Circuit1_EIS_2.z  Circuit2_EIS_1.z  Circuit2_EIS_2.z  Circuit3_EIS_1.z  Circuit3_EIS_2.z  exampleDataAutolab.txt  exampleDataBioLogic.mpr  exampleDataBioLogic.mpt  exampleDataBioLogic.txt  exampleDataBioLogic_MissingFreq.mpt  exampleDataBioLogic_NoImZ.mpt  exampleDataCHInstruments.txt  exampleDataGamry.DTA  exampleDataGamryABORT.DTA  exampleDataIvium.idf  exampleDataParstat.txt  exampleDataPowersuite.txt  exampleDataVersaStudio.par  exampleDataZPlot.z  exampleDataZPlot_noComments.z
data-files/: LT_EIS_test26_5mV_40hrs.txt  LinnetteGEIS_Test_4hrs.csv
docs/: Makefile  circuits.rst  make.bat  makefile  requirements.txt
docs/source/: circuit-elements.rst  circuits.rst  conf.py  examples.rst  faq.rst  fitting.rst  genetic.rst  getting-started.rst  index.rst  modelio.rst  preprocessing.rst  validation.rst
eisfit/: Untitled.ipynb  circuit_elements.py  circuits.py  fitting.py  genetic.py  plotting.py  preprocessing.py  validation.py
eisfit/.ipynb_checkpoints/: circuit_elements-checkpoint.py
eisfit/tests/: Z1tofit.csv  __init__.py  test_circuit_elements.py  test_circuits.py  test_fitting.py  test_validation.py
examples/: fitting_tutorial.ipynb  plotting_example.ipynb  randles.py  validation.py
impedance/: __init__.py  _version.py  circuit_elements.py  circuits.py  fitting.py  genetic.py  model_io.py  plotting.py  preprocessing.py  valid_BG.py  validation.py  visualization.py
impedance/analysis/: circuits.py
joss-paper/: paper.bib  paper.md
jupyter/: Gamry_example.ipynb  Untitled.ipynb  Untitled1.ipynb  plottingExample.ipynb
source/: conf.py  index.rst
tests/: __init__.py  test_circuit_elements.py  test_fitting.py  test_model_io.py  test_preprocessing.py  test_visualization.py
(+20 files in other folders)
