[tool.poetry]
name = "impedance.py"
version = "1.4.1"
description = "A Python package for working with electrochemical impedance data."
authors = ["Your Name <you@example.com>"]  # TODO add your name here
license = "MIT license"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = ">=1.14"
scipy = ">=1.0"
matplotlib = ">=3.0"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
coveralls = "3.2.0"
numpydoc = "^1.5.0"
nbsphinx = "^0.8.9"
pytest = ">=4.6"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
